# DarcyAIMCPServer

./: README.md  pyproject.toml  weather.py
src/darcycui_mcp/: weather.py
